[package]
name = "sebbocept"
version = "0.4.1"
edition = "2021"

[dependencies]
home = "0.5.9"
libc = "0.2.167"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
winapi = { version = "0.3.9", features = [
    "winuser",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
] }
winreg = "0.52.0"
